manifests/infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receivedata-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receivedata
  template:
    metadata:
      labels:
        app: receivedata
    spec:
      containers:
        - name: receivedata
          imagePullPolicy: Always
          image: timostroehlein/dhbw-microservices-seminararbeit-receivedata:latest
