manifests/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receivedata-service
spec:
  type: NodePort
  selector:
    app: receivedata
  ports:
    - name: receivedata
      protocol: TCP
      port: 4000
      targetPort: 4000
