manifests/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receivedata
spec:
  rules:
  - host: timostroehlein.microservices-seminararbeit.com
    http:
      paths:
      - path: /values
        pathType: Prefix
        backend:
          service:
            name: receivedata
            port:
              number: 4000
